Fixed content shifting modal bug.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -30,6 +30,7 @@ body {
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
     margin-bottom: 100px;
+    width: 100%;
 }
 
 /**
